fixes, cleanup, readme update

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
-TZ=Europe/Amsterdam
 DATA_DIR=./traefik-data
-LOG_LEVEL=WARN
+TZ=Europe/Amsterdam
 LETSENCRYPT_EMAIL=you@example.com
+
+LOG_LEVEL=WARN
+LOG_ROTATE_MAX_BACKUPS=5
+LOG_ROTATE_TRIGGER_SIZE=1M
 
 # Custom TCP/UDP ports (space or comma separated)
 CUSTOM_PORTS="51227 58526 59826 31223"
